fix profile page button position on small screen

--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -5,3 +5,11 @@
 .logOutBtn {
     float: right;
 }
+
+.logOutBtnContainer {
+    height: 38px;
+}
+
+.profileBody {
+    padding-bottom: 120px;
+}
